# controllers/postagemcontroller.go
@@ -2,7 +2,7 @@ package controllers
 
 import (
 	"blogpessoal/database"
-	"blogpessoal/entities"
+	"blogpessoal/model"
 	"encoding/json"
 	"log"
 	"net/http"
@@ -12,9 +12,9 @@ import (
 	"github.com/gorilla/mux"
 )
 
-type errorResponse struct {
-	Message    string
-}
+// type errorResponse struct {
+// 	Message    string
+// }
 
 // getAll godoc
 // @Summary Listar Postagens
@@ -22,12 +22,12 @@ type errorResponse struct {
 // @Tags postagens
 // @Accept  json
 // @Produce  json
-// @Success 200 {array} entities.Postagem
+// @Success 200 {array} model.Postagem
 // @Router /postagens [get]
-func GetPostagens(w http.ResponseWriter, r *http.Request) {
-	var postagens []entities.Postagem
+func GetPostagens(w http.ResponseWriter, _ *http.Request) {
+	var postagens []model.Postagem
 
-	database.Instance.Joins("Tema").Find(&postagens)
+	database.Instance.Joins("Tema").Joins("Usuario").Find(&postagens)
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(postagens)
@@ -40,7 +40,7 @@ func GetPostagens(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce  json
 // @Param id path string true "Id da Postagem"
-// @Success 200 {array} entities.Postagem
+// @Success 200 {array} model.Postagem
 // @Success 400 {object} errorResponse
 // @Success 404 {object} errorResponse
 // @Success 405 {object} errorResponse
@@ -49,15 +49,15 @@ func GetPostagemById(w http.ResponseWriter, r *http.Request) {
 
 	postagemId := mux.Vars(r)["id"]
 
-	if !checkIfPostagemExists(postagemId){
+	if !checkIfPostagemExists(postagemId) {
 		w.WriteHeader(http.StatusNotFound)
 		json.NewEncoder(w).Encode("Postagem Não Encontrada!")
 		return
 	}
 
-	var postagem entities.Postagem
+	var postagem model.Postagem
 
-	database.Instance.Joins("Tema").First(&postagem, postagemId)
+	database.Instance.Joins("Tema").Joins("Usuario").First(&postagem, postagemId)
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(postagem)
@@ -70,7 +70,7 @@ func GetPostagemById(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce  json
 // @Param titulo path string true "Título da Postagem"
-// @Success 200 {array} entities.Postagem
+// @Success 200 {array} model.Postagem
 // @Success 400 {object} errorResponse
 // @Success 405 {object} errorResponse
 // @Router /postagens/titulo/{titulo} [get]
@@ -78,9 +78,9 @@ func GetPostagemByTitulo(w http.ResponseWriter, r *http.Request) {
 
 	postagemTitulo := mux.Vars(r)["titulo"]
 
-	var postagens []entities.Postagem
+	var postagens []model.Postagem
 
-	database.Instance.Joins("Tema").Where("titulo LIKE ?", "%"+postagemTitulo+"%").Find(&postagens)
+	database.Instance.Joins("Tema").Joins("Usuario").Where("titulo LIKE ?", "%"+postagemTitulo+"%").Find(&postagens)
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(postagens)
@@ -92,13 +92,13 @@ func GetPostagemByTitulo(w http.ResponseWriter, r *http.Request) {
 // @Tags postagens
 // @Accept  json
 // @Produce  json
-// @Param postagem body entities.Postagem true "Criar Postagem"
-// @Success 201 {object} entities.Postagem
+// @Param postagem body model.Postagem true "Criar Postagem"
+// @Success 201 {object} model.Postagem
 // @Router /postagens [post]
 func CreatePostagem(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-Type", "application/json")
-	var postagem entities.Postagem
+	var postagem model.Postagem
 	json.NewDecoder(r.Body).Decode(&postagem)
 
 	validate := validator.New()
@@ -118,7 +118,7 @@ func CreatePostagem(w http.ResponseWriter, r *http.Request) {
 
 	var temaId string = strconv.FormatUint(uint64(postagem.TemaID), 10)
 
-	if !checkIfTemaExists(temaId){
+	if !checkIfTemaExists(temaId) {
 		w.WriteHeader(http.StatusNotFound)
 		json.NewEncoder(w).Encode("Tema Não Encontrado!")
 		return
@@ -136,8 +136,8 @@ func CreatePostagem(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce  json
 // @Param id path string true "Id da Postagem"
-// @Param postagem body entities.Postagem true "Atualizar Postagem"
-// @Success 200 {object} entities.Postagem
+// @Param postagem body model.Postagem true "Atualizar Postagem"
+// @Success 200 {object} model.Postagem
 // @Success 400 {object} errorResponse
 // @Success 404 {object} errorResponse
 // @Success 405 {object} errorResponse
@@ -146,13 +146,13 @@ func UpdatePostagem(w http.ResponseWriter, r *http.Request) {
 
 	postagemId := mux.Vars(r)["id"]
 
-	if !checkIfPostagemExists(postagemId){
+	if !checkIfPostagemExists(postagemId) {
 		w.WriteHeader(http.StatusNotFound)
 		json.NewEncoder(w).Encode("Postagem Não Encontrada!")
 		return
 	}
 
-	var postagem entities.Postagem
+	var postagem model.Postagem
 
 	database.Instance.First(&postagem, postagemId)
 	json.NewDecoder(r.Body).Decode(&postagem)
@@ -174,7 +174,7 @@ func UpdatePostagem(w http.ResponseWriter, r *http.Request) {
 
 	var temaId string = strconv.FormatUint(uint64(postagem.TemaID), 10)
 
-	if !checkIfTemaExists(temaId){
+	if !checkIfTemaExists(temaId) {
 		w.WriteHeader(http.StatusNotFound)
 		json.NewEncoder(w).Encode("Tema Não Encontrado!")
 		return
@@ -203,13 +203,13 @@ func DeletePostagem(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	postagemId := mux.Vars(r)["id"]
 
-	if !checkIfPostagemExists(postagemId){
+	if !checkIfPostagemExists(postagemId) {
 		w.WriteHeader(http.StatusNotFound)
 		json.NewEncoder(w).Encode("Postagem Não Encontrada!")
 		return
 	}
 
-	var postagem entities.Postagem
+	var postagem model.Postagem
 
 	database.Instance.Delete(&postagem, postagemId)
 	w.WriteHeader(http.StatusNoContent)
@@ -218,9 +218,9 @@ func DeletePostagem(w http.ResponseWriter, r *http.Request) {
 
 func checkIfPostagemExists(postagemId string) bool {
 
-	var postagem entities.Postagem
+	var postagem model.Postagem
 
 	database.Instance.First(&postagem, postagemId)
-	
+
 	return postagem.ID != 0
 }
