# controllers/usuariocontroller.go
@@ -2,7 +2,7 @@
 
 import (
 	"blogpessoal/database"
-	"blogpessoal/entities"
+	"blogpessoal/model"
 	"encoding/json"
 	"log"
 	"net/http"
@@ -18,11 +18,11 @@ import (
 // @Tags usuarios
 // @Accept  json
 // @Produce  json
-// @Success 200 {array} entities.Usuario
+// @Success 200 {array} model.Usuario
 // @Router /usuarios [get]
-func GetUsuarios(w http.ResponseWriter, r *http.Request) {
+func GetUsuarios(w http.ResponseWriter, _ *http.Request) {
 
-	var usuarios []entities.Usuario
+	var usuarios []model.Usuario
 
 	database.Instance.Preload("Postagens").Find(&usuarios)
 	w.Header().Set("Content-Type", "application/json")
@@ -37,7 +37,7 @@ func GetUsuarios(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce  json
 // @Param id path string true "Id do Usuario"
-// @Success 200 {array} entities.Usuario
+// @Success 200 {array} model.Usuario
 // @Success 400 {object} errorResponse
 // @Success 404 {object} errorResponse
 // @Success 405 {object} errorResponse
@@ -52,7 +52,7 @@ func GetUsuarioById(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var usuario entities.Usuario
+	var usuario model.Usuario
 
 	database.Instance.Preload("Postagens").First(&usuario, usuarioId)
 	w.Header().Set("Content-Type", "application/json")
@@ -66,12 +66,12 @@ func GetUsuarioById(w http.ResponseWriter, r *http.Request) {
 // @Tags usuarios
 // @Accept  json
 // @Produce  json
-// @Param usuario body entities.Usuario true "Criar Usuario"
-// @Success 201 {object} entities.Usuario
+// @Param usuario body model.Usuario true "Criar Usuario"
+// @Success 201 {object} model.Usuario
 // @Router /usuarios [post]
 func CreateUsuario(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
-	var usuario entities.Usuario
+	var usuario model.Usuario
 	json.NewDecoder(r.Body).Decode(&usuario)
 
 	validate := validator.New()
@@ -88,7 +88,13 @@ func CreateUsuario(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	hash,_ := HashPassword(usuario.Senha)
+	if checkIfUsuarioEmailExists(usuario.Usuario) {
+		w.WriteHeader(http.StatusBadRequest)
+		json.NewEncoder(w).Encode("Usuario já Cadastrado!")
+		return
+	}
+
+	hash, _ := HashPassword(usuario.Senha)
 	usuario.Senha = hash
 
 	database.Instance.Create(&usuario)
@@ -103,12 +109,12 @@ func CreateUsuario(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce  json
 // @Param id path string true "Id do usuario"
-// @Param Usuario body entities.Usuario true "Atualizar Usuario"
-// @Success 200 {object} entities.Usuario
+// @Param Usuario body model.Usuario true "Atualizar Usuario"
+// @Success 200 {object} model.Usuario
 // @Success 400 {object} errorResponse
 // @Success 404 {object} errorResponse
 // @Success 405 {object} errorResponse
-// @Router /usuarios/{id} [put]
+// @Router /usuarios/atualizar/{id} [put]
 func UpdateUsuario(w http.ResponseWriter, r *http.Request) {
 
 	usuarioId := mux.Vars(r)["id"]
@@ -119,11 +125,11 @@ func UpdateUsuario(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var usuario entities.Usuario
+	var usuario model.Usuario
 
 	database.Instance.First(&usuario, usuarioId)
 	json.NewDecoder(r.Body).Decode(&usuario)
-	
+
 	validate := validator.New()
 
 	err := validate.Struct(usuario)
@@ -138,9 +144,9 @@ func UpdateUsuario(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	hash,_ := HashPassword(usuario.Senha)
+	hash, _ := HashPassword(usuario.Senha)
 	usuario.Senha = hash
-	
+
 	database.Instance.Save(&usuario)
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
@@ -149,19 +155,28 @@ func UpdateUsuario(w http.ResponseWriter, r *http.Request) {
 
 func checkIfUsuarioExists(usuarioId string) bool {
 
-	var usuario entities.Usuario
+	var usuario model.Usuario
 	database.Instance.First(&usuario, usuarioId)
 
-	return usuario.ID != 0 
+	return usuario.ID != 0
+
+}
+
+func checkIfUsuarioEmailExists(usuarioEmail string) bool {
+
+	var usuario model.Usuario
+	database.Instance.Where("usuario = ?", usuarioEmail).Find(&usuario)
+
+	return usuario.Usuario != ""
 
 }
 
 func HashPassword(password string) (string, error) {
-    bytes, err := bcrypt.GenerateFromPassword([]byte(password), 14)
-    return string(bytes), err
+	bytes, err := bcrypt.GenerateFromPassword([]byte(password), 14)
+	return string(bytes), err
 }
 
 func CheckPasswordHash(password, hash string) bool {
-    err := bcrypt.CompareHashAndPassword([]byte(hash), []byte(password))
-    return err == nil
+	err := bcrypt.CompareHashAndPassword([]byte(hash), []byte(password))
+	return err == nil
 }
