# docs/swagger.json
@@ -36,7 +36,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.Postagem"
+                                "$ref": "#/definitions/model.Postagem"
                             }
                         }
                     }
@@ -61,7 +61,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Postagem"
+                            "$ref": "#/definitions/model.Postagem"
                         }
                     }
                 ],
@@ -69,7 +69,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/entities.Postagem"
+                            "$ref": "#/definitions/model.Postagem"
                         }
                     }
                 }
@@ -103,7 +103,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.Postagem"
+                                "$ref": "#/definitions/model.Postagem"
                             }
                         }
                     },
@@ -150,7 +150,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.Postagem"
+                                "$ref": "#/definitions/model.Postagem"
                             }
                         }
                     },
@@ -200,7 +200,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Postagem"
+                            "$ref": "#/definitions/model.Postagem"
                         }
                     }
                 ],
@@ -208,7 +208,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.Postagem"
+                            "$ref": "#/definitions/model.Postagem"
                         }
                     },
                     "400": {
@@ -299,7 +299,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.Tema"
+                                "$ref": "#/definitions/model.Tema"
                             }
                         }
                     }
@@ -324,7 +324,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Tema"
+                            "$ref": "#/definitions/model.Tema"
                         }
                     }
                 ],
@@ -332,7 +332,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/entities.Tema"
+                            "$ref": "#/definitions/model.Tema"
                         }
                     }
                 }
@@ -366,7 +366,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.Tema"
+                                "$ref": "#/definitions/model.Tema"
                             }
                         }
                     },
@@ -413,7 +413,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.Tema"
+                                "$ref": "#/definitions/model.Tema"
                             }
                         }
                     },
@@ -463,7 +463,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Tema"
+                            "$ref": "#/definitions/model.Tema"
                         }
                     }
                 ],
@@ -471,7 +471,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.Tema"
+                            "$ref": "#/definitions/model.Tema"
                         }
                     },
                     "400": {
@@ -542,6 +542,176 @@
                     }
                 }
             }
+        },
+        "/usuarios": {
+            "get": {
+                "description": "Lista todos os Usuarios",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "usuarios"
+                ],
+                "summary": "Listar Usuarios",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Usuario"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Cria um novo Usuario",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "usuarios"
+                ],
+                "summary": "Criar Usuario",
+                "parameters": [
+                    {
+                        "description": "Criar Usuario",
+                        "name": "usuario",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Usuario"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/model.Usuario"
+                        }
+                    }
+                }
+            }
+        },
+        "/usuarios/atualizar/{id}": {
+            "put": {
+                "description": "Edita um Usuario",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "usuarios"
+                ],
+                "summary": "Atualizar Usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id do usuario",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Atualizar Usuario",
+                        "name": "Usuario",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Usuario"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Usuario"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.errorResponse"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/usuarios/{id}": {
+            "get": {
+                "description": "Lista um Usuario por id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "usuarios"
+                ],
+                "summary": "Listar Usuario por id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id do Usuario",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Usuario"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.errorResponse"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.errorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -553,12 +723,13 @@
                 }
             }
         },
-        "entities.Postagem": {
+        "model.Postagem": {
             "type": "object",
             "required": [
                 "tema_id",
                 "texto",
-                "titulo"
+                "titulo",
+                "usuario_id"
             ],
             "properties": {
                 "data": {
@@ -570,7 +741,7 @@
                     "example": 1
                 },
                 "tema": {
-                    "$ref": "#/definitions/entities.Tema"
+                    "$ref": "#/definitions/model.Tema"
                 },
                 "tema_id": {
                     "type": "integer",
@@ -587,10 +758,17 @@
                     "maxLength": 100,
                     "minLength": 5,
                     "example": "Minha primeira postagem"
+                },
+                "usuario": {
+                    "$ref": "#/definitions/model.Usuario"
+                },
+                "usuario_id": {
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
-        "entities.Tema": {
+        "model.Tema": {
             "type": "object",
             "required": [
                 "descricao"
@@ -605,8 +783,39 @@
                 "postagens": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/entities.Postagem"
+                        "$ref": "#/definitions/model.Postagem"
                     }
+                }
+            }
+        },
+        "model.Usuario": {
+            "type": "object",
+            "required": [
+                "nome",
+                "senha",
+                "usuario"
+            ],
+            "properties": {
+                "foto": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "nome": {
+                    "type": "string"
+                },
+                "postagens": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Postagem"
+                    }
+                },
+                "senha": {
+                    "type": "string"
+                },
+                "usuario": {
+                    "type": "string"
                 }
             }
         }
